--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "if": "nodemon ./js/07-if.js",
     "function": "nodemon ./js/06-function.js",
     "array": "nodemon ./js/04-array.js",
     "boolean": "nodemon ./js/03-boolean.js",
